chore: fix card alignment

--- a/wc18-front/src/app/components/bets/bets-card.component.scss
+++ b/wc18-front/src/app/components/bets/bets-card.component.scss
@@ -6,9 +6,4 @@
 
 .card {
   width: 100%;
-
-  .card-title {
-    margin: 0;
-    padding: 0;
-  }
 }
