--- a/wc18-front/src/app/components/dashboard/dashboard-card.scss
+++ b/wc18-front/src/app/components/dashboard/dashboard-card.scss
@@ -7,14 +7,4 @@
 .card {
   width: 100%;
   height: 100%;
-
-  .card-title {
-    margin: 0;
-    padding: 0;
-  }
-
-  .card-body {
-    overflow-y: scroll;
-    overflow-x: auto;
-  }
 }
