--- a/wc18-front/src/styles.scss
+++ b/wc18-front/src/styles.scss
@@ -37,7 +37,17 @@ body {
 }
 
 .card {
+  .card-header {
+    $height: 65px;
+
+    height: $height;
+    max-height: $height;
+    min-height: $height;
+  }
+
   .card-title {
+    padding-top: 5px;
+
     mat-icon {
       display: inline-block;
       vertical-align: -3px;
@@ -47,5 +57,7 @@ body {
 
   .card-body {
     background-color: #f9f9f9;
+    overflow-y: scroll;
+    overflow-x: auto;
   }
 }
